Limpiado y mejorado código donde se han implementado varios métodos que se adaptan mejor a la lógica de negocio.