@@ -13,8 +13,9 @@ import com.eduardo.examen_backend.examenes.opciones.OpcionDTO;
 import com.eduardo.examen_backend.examenes.preguntas.Pregunta;
 import com.eduardo.examen_backend.examenes.preguntas.PreguntaDTO;
 import com.eduardo.examen_backend.examenes.preguntas.PreguntaRepository;
-import com.eduardo.examen_backend.shared.exceptions.DuplicateException;
 import com.eduardo.examen_backend.shared.exceptions.NotFoundException;
+import com.eduardo.examen_backend.usuarios.Usuario;
+import com.eduardo.examen_backend.usuarios.UsuarioRepository;
 
 import lombok.RequiredArgsConstructor;
 
@@ -25,17 +26,18 @@ public class ExamenServiceImpl implements ExamenService {
 
     private final ExamenRepository examenRepository;
     private final PreguntaRepository preguntaRepository;
+    private final UsuarioRepository usuarioRepository;
 
     @Override
     @Transactional(readOnly = true)
     public List<ExamenDTO> obtenerTodos() {
-        return examenRepository.findAll().stream().map(this::mapearADTO).collect(Collectors.toList());
+        return examenRepository.findAll().stream().map(this::mapearADTO).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<ExamenDTO> obtenerActivos() {
-        return examenRepository.findByActivoTrue().stream().map(this::mapearADTO).collect(Collectors.toList());
+        return examenRepository.findByActivoTrue().stream().map(this::mapearADTO).toList();
     }
 
     @Override
@@ -45,15 +47,20 @@ public class ExamenServiceImpl implements ExamenService {
         return mapearADTO(examen);
     }
 
-@Override
+    @Override
     @Transactional
-    public ExamenDTO crearExamen(ExamenDTO dto) {
-        Examen examen = Examen.builder().titulo(dto.getTitulo()).descripcion(dto.getDescripcion()).activo(dto.isActivo()).build();
+    public ExamenDTO crearExamen(ExamenDTO dto, String correoLogueado) {
+        Usuario profesor = usuarioRepository.findByCorreoUsuario(correoLogueado)
+                .orElseThrow(() -> new NotFoundException("El usuario logueado no existe en la base de datos."));
+        Examen examen = Examen.builder()
+                .titulo(dto.getTitulo())
+                .descripcion(dto.getDescripcion())
+                .activo(dto.getActivo() != null && dto.getActivo())
+                .profesor(profesor)
+                .build();
         Examen examenGuardado = examenRepository.save(examen);
-        
-        // LOG CRÍTICO
-        log.info("Nueva plantilla de examen creada con éxito. ID: {}, Título: '{}'", examenGuardado.getIdExamen(), examenGuardado.getTitulo());
-        
+        log.info("[Autor: {}] Nueva plantilla de examen creada con éxito. ID: {}", correoLogueado,
+                examenGuardado.getIdExamen());
         return mapearADTO(examenGuardado);
     }
 
@@ -63,6 +70,9 @@ public class ExamenServiceImpl implements ExamenService {
         Examen examen = buscarExamenOThrow(id);
         examen.setTitulo(dto.getTitulo());
         examen.setDescripcion(dto.getDescripcion());
+        if (dto.getActivo() != null) {
+            examen.setActivo(dto.getActivo());
+        }
         return mapearADTO(examenRepository.save(examen));
     }
 
@@ -85,17 +95,16 @@ public class ExamenServiceImpl implements ExamenService {
 
     @Override
     @Transactional
-    public ExamenDTO anhadirPregunta(Integer idExamen, Integer idPregunta) {
+    public ExamenDTO anhadirPreguntas(Integer idExamen, List<Integer> idsPreguntas) {
         Examen examen = buscarExamenOThrow(idExamen);
-        Pregunta pregunta = preguntaRepository.findById(idPregunta)
-            .orElseThrow(() -> new NotFoundException("La pregunta con ID " + idPregunta + " no existe."));
+        List<Pregunta> preguntas = preguntaRepository.findAllById(idsPreguntas);
 
-        if (examen.getPreguntas().contains(pregunta)) {
-            throw new DuplicateException("La pregunta ya pertenece a este examen.");
+        if (preguntas.size() != idsPreguntas.size()) {
+            throw new NotFoundException("Algunas de las preguntas proporcionadas no existen en el banco de datos.");
         }
+        examen.getPreguntas().addAll(preguntas);
 
-        examen.getPreguntas().add(pregunta);
-        log.info("Pregunta ID {} añadida exitosamente al Examen ID {}", idPregunta, idExamen);
+        log.info("Añadidas {} preguntas al Examen ID {}", preguntas.size(), idExamen);
         return mapearADTO(examenRepository.save(examen));
     }
 
@@ -104,7 +113,7 @@ public class ExamenServiceImpl implements ExamenService {
     public ExamenDTO quitarPregunta(Integer idExamen, Integer idPregunta) {
         Examen examen = buscarExamenOThrow(idExamen);
         Pregunta pregunta = preguntaRepository.findById(idPregunta)
-            .orElseThrow(() -> new NotFoundException("La pregunta con ID " + idPregunta + " no existe."));
+                .orElseThrow(() -> new NotFoundException("La pregunta con ID " + idPregunta + " no existe."));
 
         examen.getPreguntas().remove(pregunta);
         return mapearADTO(examenRepository.save(examen));
@@ -112,30 +121,31 @@ public class ExamenServiceImpl implements ExamenService {
 
     private Examen buscarExamenOThrow(Integer id) {
         return examenRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("El examen con ID " + id + " no existe."));
+                .orElseThrow(() -> new NotFoundException("El examen con ID " + id + " no existe."));
     }
 
     private ExamenDTO mapearADTO(Examen examen) {
         Set<PreguntaDTO> preguntasDTO = examen.getPreguntas().stream().map(p -> {
-            List<OpcionDTO> opciones = p.getOpciones().stream().map(o -> 
-                OpcionDTO.builder().idOpcion(o.getIdOpcion()).texto(o.getTexto()).esCorrecta(o.isEsCorrecta()).build()
-            ).toList();
+            List<OpcionDTO> opciones = p.getOpciones().stream().map(o -> OpcionDTO.builder().idOpcion(o.getIdOpcion())
+                    .texto(o.getTexto()).esCorrecta(o.isEsCorrecta()).build()).toList();
 
             return PreguntaDTO.builder()
-                .idPregunta(p.getIdPregunta())
-                .enunciado(p.getEnunciado())
-                .idCategoria(p.getCategoria().getIdCategoria())
-                .nombreCategoria(p.getCategoria().getNombre())
-                .opciones(opciones)
-                .build();
+                    .idPregunta(p.getIdPregunta())
+                    .enunciado(p.getEnunciado())
+                    .idCategoria(p.getCategoria().getIdCategoria())
+                    .nombreCategoria(p.getCategoria().getNombre())
+                    .opciones(opciones)
+                    .build();
         }).collect(Collectors.toSet());
 
         return ExamenDTO.builder()
-            .idExamen(examen.getIdExamen())
-            .titulo(examen.getTitulo())
-            .descripcion(examen.getDescripcion())
-            .activo(examen.isActivo())
-            .preguntas(preguntasDTO)
-            .build();
+                .idExamen(examen.getIdExamen())
+                .titulo(examen.getTitulo())
+                .descripcion(examen.getDescripcion())
+                .activo(examen.isActivo())
+                .idProfesor(examen.getProfesor() != null ? examen.getProfesor().getIdUsuario() : null)
+                .nombreProfesor(examen.getProfesor() != null ? examen.getProfesor().getNombreUsuario() + " " + examen.getProfesor().getApellidoUsuario() : "Profesor Desconocido")
+                .preguntas(preguntasDTO)
+                .build();
     }
 }
